# credential-manager-mcp

./: README.md  credential_manager.py  example_usage.py  pyproject.toml  run_tests.py  test_credential_manager.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
credential_manager_mcp/: server.py
docs/: CHANGELOG.md  CONTRIBUTING.md  SETUP.md
docs/changelogs/: v0.0.1.md  v0.1.0.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md
scripts/: generate-changelog.sh  release.sh
test/: __init__.py  conftest.py  test_credential_manager.py
