[project]
name = "credential-manager-mcp"
version = "0.1.0"
description = "A FastMCP server for securely managing API credentials locally"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.0",
    "pydantic>=2.11.0",
]
authors = [
    {name = "William Zhang", email = "mclamee@yeah.net"}
]
license = {text = "MIT"}
keywords = ["mcp", "credentials", "api", "fastmcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/yourusername/credential-manager-mcp"
Repository = "https://github.com/yourusername/credential-manager-mcp"
Issues = "https://github.com/yourusername/credential-manager-mcp/issues"

[project.scripts]
credential-manager-mcp = "credential_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["credential_manager.py"]

[tool.uv]
dev-dependencies = []
